<resources>
    <string name="app_name">HWApp</string>
    <string name="movies_list">Movies list</string>
    <string name="movies_icon">movies icon</string>
    <string name="avengers_name">Avengers: \nEnd Game</string>
    <string name="avengers_name_small">Avengers: End Game and some text for testing</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="avengers">avengers</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="tenet_name">Tenet</string>
    <string name="black_widow_name">Black Widow</string>
    <string name="wonder_woman_name">Wonder Woman</string>
    <string name="age_limit_13">13+</string>
    <string name="back_btn">Back</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="_137_min">137 MIN</string>
    <string name="channel_new_movies">New movies</string>
    <string name="channel_new_movies_description">New movies with highest rating</string>
    <string name="add_to_calendar">Add to calendar</string>
</resources>