<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HWApp"
        tools:context=".MovieDetailsActivity">


        <ImageView
            android:id="@+id/imageViewMovieBackdrop"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/avengers_bg" />

        <ImageView
            android:id="@+id/imageViewMovieBackdropGradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/avengers"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewMovieBackdrop"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMovieBackdrop"
            app:layout_constraintStart_toStartOf="@+id/imageViewMovieBackdrop"
            app:layout_constraintTop_toTopOf="@+id/imageViewMovieBackdrop"
            app:srcCompat="@drawable/rect_gradient" />

        <RatingBar
            android:id="@+id/ratingBarMovie"
            style="@style/mySmallRatingBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/mySmallRatingBarTheme"
            app:layout_constraintBottom_toBottomOf="@+id/textViewReviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenre" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:alpha="0.5"
            android:text="@string/back_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawablePadding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewMovieBackdrop"
            app:drawableLeftCompat="@drawable/chevron_left_white" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="222dp"
            android:gravity="center"
            android:text="@string/age_limit_13"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewMovieBackdrop" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="16dp"
            android:text="@string/avengers_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewMovieBackdrop" />

        <TextView
            android:id="@+id/textViewGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/text_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.5"
            android:text="@string/_125_reviews"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ratingBarMovie"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenre" />

        <TextView
            android:id="@+id/textViewStorylineTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReviews" />

        <TextView
            android:id="@+id/textViewStorylineText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline_text"
            android:textColor="@color/text_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStorylineTitle" />

        <TextView
            android:id="@+id/textViewCastTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStorylineText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCastTitle"
            tools:listitem="@layout/view_holder_actor" />

        <Button
            android:id="@+id/btnAddMovieToCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_calendar"
            app:layout_constraintBottom_toTopOf="@+id/textViewStorylineTitle"
            app:layout_constraintEnd_toEndOf="@+id/textViewGenre"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenre"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>